<resources>
    <string name="app_name">Declaration Table</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--    Menu Drawer Strings-->
    <string name="ad_cat1">Обьявления</string>
    <string name="ad_my_ads">Мои обьявления</string>
    <string name="my_fav">Избранное</string>
    <string name="def">Главная страница</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_remove_ads">Реклама</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Войти</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="not_reg">Войдите или зарегестируетесь!</string>

    <!--Sign Dialog-->
    <string name="email_reset_password">На почту отправлено письмо для ввосстоновления пароля</string>
    <string name="dialog_reset_email_message">Для ввостоновления пароля укажите ваш Email</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегестрироватся</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегестрироватся</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_email_done">На вашу почту была отпревлена ссылка для подтверждения вашего аккаунта, пожалуйста подтвердите ваш аккаунт!</string>
    <string name="sign_in_error">Не удалось ввойти!</string>

    <!--Edit Activity-->
    <string name="select_country">*Выберете страну</string>
    <string name="select_city">*Выберете город</string>
    <string name="city">Город</string>
    <string name="country">Страна</string>
    <string name="index">Индекс</string>
    <string name="index_hint">*Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Номер телефона</string>
    <string name="send">Отправка</string>
    <string name="with_send">С отправкой почтой?</string>

    <string name="category">Категоря</string>
    <string name="select_category">*Выберете категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="description">Описание</string>
    <string name="description_hint">Опишите товар</string>
    <string name="publish">Опубликовать</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Напишите название товара</string>

    <!--add list item-->
    <string name="price_desc">Цена:</string>

</resources>